Modificación para probar PUSH

--- a/Primer_Sitio/index.html
+++ b/Primer_Sitio/index.html
@@ -14,7 +14,7 @@
         </nav>
     <main>
         
-        <h1 class="bienvenida">¡BIENVENIDOS AL COLEGIO!</h1>
+        <h1 class="bienvenida">¡TE DAMOS LA BIENVENIDA!</h1>
         <div class="fotos">
             
             <img class="foto1" src="Imágenes/Foto1.jpg" alt="">
